spec/test_templates/yaml/security_group/valid_security_group_with_two_ingress.yml
---
Parameters:
  VpcId:
    Type: "AWS::EC2::VPC::Id"

Resources:
  sg2:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "some_group_desc"
      SecurityGroupIngress:
        - CidrIp: "10.1.2.3/32"
          FromPort: 34
          ToPort: 36
          IpProtocol: tcp
        - CidrIp: "10.1.2.4/32"
          FromPort: 55
          ToPort: 56
          IpProtocol: tcp
      VpcId:
        Ref: VpcId
