spec/test_templates/yaml/security_group/valid_standalone_ingress_with_imported_group_id.yml
---
Parameters:
  VpcId:
    Type: "AWS::EC2::VPC::Id"

Resources:
  sg:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "some_group_desc"
      VpcId:
        Ref: VpcId

  securityGroupIngress1234:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      GroupId: !ImportValue SuperSpecialSecurityGroup
      CidrIp: "10.1.2.3/32"
      FromPort: 38
      ToPort: 40
      IpProtocol: "tcp"

  securityGroupIngress5:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      GroupId:
        Fn::ImportValue: SuperSpecialSecurityGroup
      CidrIp: "10.1.2.5/32"
      FromPort: 38
      ToPort: 40
      IpProtocol: tcp
